# ftl-api

./: .codeclimate.yml  .dockercontainers  .dockerignore  .gitignore  .pylintrc  .terrahub.yml  CODEOWNERS  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  setup.cfg
docs/: develop.md  environment.md  message.md  pattern.md  principle.md  readme.md  workflow-client.md  workflow-server.md
docs/data/: history-liquidity.md  history-transaction.md  manager-account.md  manager-member.md  manager-message-category.md  manager-message-definition.md  manager-message-metadata.md  manager-message.md  manager-microservice.md  manager-provider.md  manager-transaction-type.md  manager-transaction.md  message-proc.md  message-raw.md  message-schema.md  platform-config.md  platform-entity.md  platform-environment.md  platform-mapping.md  platform-response.md  readme.md  runtime-liquidity.md  runtime-transaction.md
docs/microservice/: ftl-api-entity.md  ftl-api-latest.md  ftl-api-mapping.md  ftl-api-ping.md  ftl-api-status.md  ftl-api-uuid.md  ftl-mgr-account.md  ftl-mgr-member.md  ftl-mgr-message-category.md  ftl-mgr-message-parser.md  ftl-mgr-message.md  ftl-mgr-microservice.md  ftl-mgr-platform.md  ftl-mgr-transaction.md  ftl-msa-amq-in.md  ftl-msa-amq-out.md  ftl-msa-imq-in.md  ftl-msa-imq-out.md  ftl-msa-kafka-in.md  ftl-msa-kafka-out.md  ftl-msa-msg-client.md  ftl-msa-msg-in.md  ftl-msa-msg-out.md  ftl-msa-msg-pacs-002.md  ftl-msa-msg-pacs-008.md  ftl-msa-msg-pacs-009.md  ftl-msa-pubsub-in.md  readme.md  (+3 more)
iac/: aws.global.tf  aws.k8s.tf
poetry/: main.py
(+1157 files in other folders)
